@@ -32,10 +32,15 @@ routines := offtime asctime clock ctime ctime_r difftime \
 	    timespec_get
 aux :=	    era alt_digit lc-time-cleanup
 
-tests	:= test_time clocktest tst-posixtz tst-strptime tst_wcsftime \
+tests	:= test_time clocktest tst-posixtz tst_wcsftime \
 	   tst-getdate tst-mktime tst-mktime2 tst-ftime_l tst-strftime \
 	   tst-mktime3 tst-strptime2 bug-asctime bug-asctime_r bug-mktime1 \
 	   tst-strptime3 bug-getdate1
+tests-static = tst-strptime-static
+tests += $(tests-static)
+ifeq (yes,$(build-shared))
+tests += tst-strptime
+endif
 
 include ../Rules
 
