@@ -1,0 +1,2 @@
+#define STATIC_TEST
+#include "tst-strptime.c"
